--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ a {
     border-radius: 50%;
     border: 2px solid #333;
     display: block;
-    margin-bottom: 40px;
+    margin: 0 auto 20px auto;
 }
 
 .icons {
@@ -166,6 +166,10 @@ footer {
 
     nav ul li {
         margin: 0 10px;
+    }
+
+    .headshot-img {
+        display: inline;
     }
 
     #projects {
